Removing unwanted content

--- a/FedExVSUPS.ipynb
+++ b/FedExVSUPS.ipynb
@@ -81,10 +81,10 @@
     "    # See https://dev.twitter.com/docs/auth/oauth for more information \n",
     "    # on Twitter's OAuth implementation.\n",
     "    \n",
-    "    CONSUMER_KEY = 'EfYCvML3KABlHgurJhRktZcX2'\n",
-    "    CONSUMER_SECRET ='bJslWzrSthzXUs9qBMjyXrWFslie9L9RHLoBmiiXskhLJ51042'\n",
-    "    OAUTH_TOKEN = '710209200-84FbgvZMOlnxQqse6kXP70qJQ0xy63LZJPsKDown'\n",
-    "    OAUTH_TOKEN_SECRET = 'UVHWAOTF1BeZQa7MJs3m3vUVSvyCXdTvVukoe1EpOaJRN'\n",
+    "    CONSUMER_KEY = ''\n",
+    "    CONSUMER_SECRET =''\n",
+    "    OAUTH_TOKEN = ''\n",
+    "    OAUTH_TOKEN_SECRET = ''\n",
     "    \n",
     "    auth = twitter.oauth.OAuth(OAUTH_TOKEN, OAUTH_TOKEN_SECRET,\n",
     "                               CONSUMER_KEY, CONSUMER_SECRET)\n",
